<resources>
    <string name="app_name">SanskritKeyboard</string>

    <string name="key_label_digit_0">0</string>
    <string name="key_label_digit_1">1</string>
    <string name="key_label_digit_2">2</string>
    <string name="key_label_digit_3">3</string>
    <string name="key_label_digit_4">4</string>
    <string name="key_label_digit_5">5</string>
    <string name="key_label_digit_6">6</string>
    <string name="key_label_digit_7">7</string>
    <string name="key_label_digit_8">8</string>
    <string name="key_label_digit_9">9</string>

    <string name="key_label_letter_q">q</string>
    <string name="key_label_letter_w">w</string>
    <string name="key_label_letter_e">e</string>
    <string name="key_label_letter_r">r</string>
    <string name="key_label_letter_t">t</string>
    <string name="key_label_letter_y">y</string>
    <string name="key_label_letter_u">u</string>
    <string name="key_label_letter_i">i</string>
    <string name="key_label_letter_o">o</string>
    <string name="key_label_letter_p">p</string>

    <string name="key_label_letter_a">a</string>
    <string name="key_label_letter_s">s</string>
    <string name="key_label_letter_d">d</string>
    <string name="key_label_letter_f">f</string>
    <string name="key_label_letter_g">g</string>
    <string name="key_label_letter_h">h</string>
    <string name="key_label_letter_j">j</string>
    <string name="key_label_letter_k">k</string>
    <string name="key_label_letter_l">l</string>

    <string name="key_label_letter_z">z</string>
    <string name="key_label_letter_x">x</string>
    <string name="key_label_letter_c">c</string>
    <string name="key_label_letter_v">v</string>
    <string name="key_label_letter_b">b</string>
    <string name="key_label_letter_n">n</string>
    <string name="key_label_letter_m">m</string>

    <string name="key_label_space">\Space</string>
    <string name="key_label_placeholder">°</string>
    <string name="key_label_period">.</string>
    <string name="key_label_comma">,</string>
    <string name="key_label_question_mark">\?</string>
    <string name="key_label_exclamation_mark">!</string>
    <string name="key_label_hyphen">-</string>
    <string name="key_label_at">\@</string>
    <string name="key_label_sep">|</string>

    <string name="key_label_iast_a_long">\u0101</string>
    <string name="key_label_iast_i_long">\u012B</string>
    <string name="key_label_iast_u_long">\u016B</string>
    <string name="key_label_iast_r">\u1E5B</string>
    <string name="key_label_iast_l">\u1E37</string>
    <string name="key_label_iast_t">\u1E6D</string>
    <string name="key_label_iast_d">\u1E0D</string>
    <string name="key_label_iast_n1">\u1E45</string>
    <string name="key_label_iast_n2">\u00F1</string>
    <string name="key_label_iast_n3">\u1E47</string>
    <string name="key_label_iast_s1">\u015B</string>
    <string name="key_label_iast_s2">\u1E63</string>
    <string name="key_label_iast_m">\u1E43</string>
    <string name="key_label_iast_h">\u1E25</string>

    <!-- १ २ ३ ४ ५ ६ ७ ८ ९ ० -->
    <string name="key_label_sa_digit_1">\u0967</string>
    <string name="key_label_sa_digit_2">\u0968</string>
    <string name="key_label_sa_digit_3">\u0969</string>
    <string name="key_label_sa_digit_4">\u096A</string>
    <string name="key_label_sa_digit_5">\u096B</string>
    <string name="key_label_sa_digit_6">\u096C</string>
    <string name="key_label_sa_digit_7">\u096D</string>
    <string name="key_label_sa_digit_8">\u096E</string>
    <string name="key_label_sa_digit_9">\u096F</string>
    <string name="key_label_sa_digit_0">\u0966</string>

    <!-- अ(आ) इ(ई) उ(ऊ) ऋ(ॠ) ऌ(ॡ) ए(ऐ) ओ(औ) ह -->
    <string name="key_label_sa_letter_a">\u0905</string>
    <string name="key_label_sa_letter_i">\u0907</string>
    <string name="key_label_sa_letter_u">\u0909</string>
    <string name="key_label_sa_letter_ri">\u090B</string>
    <string name="key_label_sa_letter_li">\u090C</string>
    <string name="key_label_sa_letter_e">\u090F</string>
    <string name="key_label_sa_letter_o">\u0913</string>
    <string name="key_label_sa_letter_h">\u0939</string>

    <!-- ् ऽ ।(॥) -->
    <string name="key_label_sa_red">\u094D</string>
    <string name="key_label_sa_apostrophe">\u093D</string>
    <string name="key_label_sa_sep">\u0964</string>
    <string name="key_label_sa_double_sep">\u0965</string>

    <!-- क ख ग घ च छ ज झ ट ठ -->
    <string name="key_label_sa_letter_ka">\u0915</string>
    <string name="key_label_sa_letter_kha">\u0916</string>
    <string name="key_label_sa_letter_ga">\u0917</string>
    <string name="key_label_sa_letter_gha">\u0918</string>
    <string name="key_label_sa_letter_ca">\u091A</string>
    <string name="key_label_sa_letter_cha">\u091B</string>
    <string name="key_label_sa_letter_ja">\u091C</string>
    <string name="key_label_sa_letter_jha">\u091D</string>
    <string name="key_label_sa_letter_ta2">\u091F</string>
    <string name="key_label_sa_letter_tha2">\u0920</string>

    <!-- ड ढ त थ द ध प फ ब भ -->
    <string name="key_label_sa_letter_da2">\u0921</string>
    <string name="key_label_sa_letter_dha2">\u0922</string>
    <string name="key_label_sa_letter_ta">\u0924</string>
    <string name="key_label_sa_letter_tha">\u0925</string>
    <string name="key_label_sa_letter_da">\u0926</string>
    <string name="key_label_sa_letter_dha">\u0927</string>
    <string name="key_label_sa_letter_pa">\u092A</string>
    <string name="key_label_sa_letter_pha">\u092B</string>
    <string name="key_label_sa_letter_ba">\u092C</string>
    <string name="key_label_sa_letter_bha">\u092D</string>

    <!--  ङ ञ ण न म श ष स -->
    <string name="key_label_sa_letter_na1">\u0919</string>
    <string name="key_label_sa_letter_na2">\u091E</string>
    <string name="key_label_sa_letter_na3">\u0923</string>
    <string name="key_label_sa_letter_na4">\u0928</string>
    <string name="key_label_sa_letter_ma">\u092E</string>
    <string name="key_label_sa_letter_sa1">\u0936</string>
    <string name="key_label_sa_letter_sa2">\u0937</string>
    <string name="key_label_sa_letter_sa3">\u0938</string>

    <!-- य र ल व -->
    <string name="key_label_sa_letter_ya">\u092F</string>
    <string name="key_label_sa_letter_ra">\u0930</string>
    <string name="key_label_sa_letter_la">\u0932</string>
    <string name="key_label_sa_letter_va">\u0935</string>

    <!--  ् ऀ ँ ं ः ा ि ी ु ू -->
    <string name="key_label_sa_extra_red">\u094D</string>
    <string name="key_label_sa_extra_omkara1">\u0900</string>
    <string name="key_label_sa_extra_omkara2">\u0901</string>
    <string name="key_label_sa_extra_anushvara">\u0902</string>
    <string name="key_label_sa_extra_visarga">\u0903</string>
    <string name="key_label_sa_extra_a_long">\u093E</string>
    <string name="key_label_sa_extra_i_short">\u093F</string>
    <string name="key_label_sa_extra_i_long">\u0940</string>
    <string name="key_label_sa_extra_u_short">\u0941</string>
    <string name="key_label_sa_extra_u_long">\u0942</string>

    <!-- ृ ॄ ॢ ॣ े ै ो ौ ॑ ॒ -->
    <string name="key_label_sa_extra_ri">\u0943</string>
    <string name="key_label_sa_extra_ri_long">\u0944</string>
    <string name="key_label_sa_extra_extra_lri">\u0962</string>
    <string name="key_label_sa_extra_lri_long">\u0963</string>
    <string name="key_label_sa_extra_e">\u0947</string>
    <string name="key_label_sa_extra_ai">\u0948</string>
    <string name="key_label_sa_extra_o">\u094B</string>
    <string name="key_label_sa_extra_au">\u094C</string>
    <string name="key_label_sa_extra_accent1">\u0951</string>
    <string name="key_label_sa_extra_accent2">\u0952</string>

    <string name="lang_label_sa">संस्कृतम्</string>
    <string name="lang_label_qwerty">Qwerty</string>
    <string name="key_label_apostrophe">\'</string>
    <string name="key_label_punctuation">\' - ?</string>
    <string name="key_label_paranthesis">( )</string>
    <string name="key_label_symbols_qwerty">+ *</string>
    <string name="key_action_description">Action key</string>
    <string name="key_shift_description">Shift key</string>
    <string name="key_backspace_description">Backspace key</string>
    <string name="key_swap_to_digits_content_descr">Swap to digits</string>

    <string name="keyboard_name">SimpleSanskritKeyboard</string>
    <string name="keyboard_name_new">NewSanskritKeyboard</string>

</resources>
