<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/row_suggestions" android:id="@+id/llSuggestions"/>

    <include
        android:id="@+id/llExtra"
        layout="@layout/row_extras"
        app:layout_constraintTop_toBottomOf="@id/llSuggestions"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/llSa1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llExtra">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".5"/>

        <Button
            android:id="@+id/keySaA"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_a" />

        <Button
            android:id="@+id/keySaI"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_i" />

        <Button
            android:id="@+id/keySaU"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_u" />

        <Button
            android:id="@+id/keySaRi"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_ri" />

        <Button
            android:id="@+id/keySaLri"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_li" />

        <Button
            android:id="@+id/keySaE"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_e" />

        <Button
            android:id="@+id/keySaO"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_o" />

        <Button
            android:id="@+id/keySaHa"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_h" />

        <Button
            android:id="@+id/keySaApostrophy"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_apostrophe" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".5"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSa2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llSa1">

        <Button
            android:id="@+id/keySaKa"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_ka" />

        <Button
            android:id="@+id/keySaKha"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_kha" />

        <Button
            android:id="@+id/keySaGa"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_ga" />

        <Button
            android:id="@+id/keySaGha"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_gha" />

        <Button
            android:id="@+id/keySaNa1"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_na1" />

        <Button
            android:id="@+id/keySaCa"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_ca" />

        <Button
            android:id="@+id/keySaCha"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_cha" />

        <Button
            android:id="@+id/keySaJa"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_ja" />

        <Button
            android:id="@+id/keySaJha"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_jha" />

        <Button
            android:id="@+id/keySaNa2"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_na2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSa3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llSa2">

        <Button
            android:id="@+id/keySaTa2"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_ta2" />

        <Button
            android:id="@+id/keySaTha2"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_tha2" />

        <Button
            android:id="@+id/keySaDa2"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_da2" />

        <Button
            android:id="@+id/keySaDha2"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_dha2" />

        <Button
            android:id="@+id/keySaNa3"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_na3" />

        <Button
            android:id="@+id/keySaTa"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_ta" />

        <Button
            android:id="@+id/keySaTha"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_tha" />

        <Button
            android:id="@+id/keySaDa"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_da" />

        <Button
            android:id="@+id/keySaDha"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_dha" />

        <Button
            android:id="@+id/keySaNa4"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_na4" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSa4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llSa3">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".25"/>

        <Button
            android:id="@+id/keySaPa"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_pa" />

        <Button
            android:id="@+id/keySaPha"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_pha" />

        <Button
            android:id="@+id/keySaBa"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_ba" />

        <Button
            android:id="@+id/keySaBha"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_bha" />

        <Button
            android:id="@+id/keySaMa"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_ma" />

        <Button
            android:id="@+id/keySaSa1"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_sa1" />

        <Button
            android:id="@+id/keySaSa2"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_sa2" />

        <Button
            android:id="@+id/keySaSa3"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_sa3" />

        <Button
            android:id="@+id/keyDel"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:text="Del" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".25"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llSa5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llSa4">

    <Button
        android:id="@+id/keySaYa"
        style="@style/CustomKeyLetter"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/key_label_sa_letter_ya" />

        <Button
            android:id="@+id/keySaRa"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_ra" />

        <Button
            android:id="@+id/keySaLa"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_la" />

        <Button
            android:id="@+id/keySaVa"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_letter_va" />

        <Button
            android:id="@+id/keySpace"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:text="@string/lang_label_sa" />

        <Button
            android:id="@+id/keySaSep"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_sa_sep" />

        <Button
            android:id="@+id/keySymbol"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="Sm" />

        <Button
            android:id="@+id/keyAction"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:text="Ac" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>