<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_keyboard_background"
    android:paddingRight="@dimen/key_margin"
    android:paddingEnd="@dimen/key_margin">


    <LinearLayout
        android:id="@+id/llRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llExtra">

        <Button
            android:id="@+id/keyQ"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_q" />

        <Button
            android:id="@+id/keyW"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_w" />

        <Button
            android:id="@+id/keyE"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_e" />

        <Button
            android:id="@+id/keyR"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_r" />

        <Button
            android:id="@+id/keyT"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_t" />

        <Button
            android:id="@+id/keyY"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_y" />

        <Button
            android:id="@+id/keyU"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_u" />

        <Button
            android:id="@+id/keyI"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_i" />

        <Button
            android:id="@+id/keyO"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_o" />

        <Button
            android:id="@+id/keyP"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_p" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llRow1">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".5" />

        <Button
            android:id="@+id/keyA"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_a" />

        <Button
            android:id="@+id/keyS"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_s" />

        <Button
            android:id="@+id/keyD"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_d" />

        <Button
            android:id="@+id/keyF"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_f" />

        <Button
            android:id="@+id/keyG"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_g" />

        <Button
            android:id="@+id/keyH"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_h" />

        <Button
            android:id="@+id/keyJ"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_j" />

        <Button
            android:id="@+id/keyK"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_k" />

        <Button
            android:id="@+id/keyL"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_l" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".5" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llRow2">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".5" />

        <Button
            android:id="@+id/keyZ"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_z" />

        <Button
            android:id="@+id/keyX"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_x" />

        <Button
            android:id="@+id/keyC"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_c" />

        <Button
            android:id="@+id/keyV"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_v" />

        <Button
            android:id="@+id/keyB"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_b" />

        <Button
            android:id="@+id/keyN"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_n" />

        <Button
            android:id="@+id/keyM"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_letter_m" />

        <ImageButton
            android:id="@+id/keyDel"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:src="@drawable/ic_keyboard_backspace_white_24dp"
            android:contentDescription="@string/key_backspace_description" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight=".5" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llRow3">

        <ImageButton
            android:id="@+id/keyShift"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:src="@drawable/ic_arrow_upward_white_24dp"
            android:contentDescription="@string/key_shift_description" />

        <Button
            android:id="@+id/keyPunctuation"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_punctuation"
            android:textSize="@dimen/text_size_label_symbols" />

        <Button
            android:id="@+id/keyBraces"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/key_label_paranthesis"
            android:textSize="@dimen/text_size_label_symbols" />

        <Button
            android:id="@+id/keySpace"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:text="@string/lang_label_qwerty" />

        <Button
            android:id="@+id/keySymbol"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="@dimen/text_size_label_symbols"
            android:text="@string/key_label_symbols_qwerty" />

        <ImageButton
            android:id="@+id/keyAction"
            style="@style/CustomKeyLetter"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:src="@drawable/ic_done_white_24dp"
            android:contentDescription="@string/key_action_description" />

    </LinearLayout>

    <include
        android:id="@+id/llSuggestions"
        layout="@layout/row_suggestions" />

    <include
        android:id="@+id/llExtra"
        layout="@layout/row_extras" />

</androidx.constraintlayout.widget.ConstraintLayout>